--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "jest": "^25.5.4"
     },
     "scripts": {
-        "test": "jest"
+        "test": "jest --watchAll"
     },
     "keywords": [],
     "author": "",
